--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Cat Perry's Favorite Cats</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
+    <body>
+        <!-- Your code here --> 
+    </body>
+</html>
