--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!-- Your code here -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Cat Perry's Favorite Cats</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>My Site Title</title>
     </head>
     <body>
-        <!-- Your code here --> 
+
     </body>
 </html>
